# ComputerGraphics

./: .gitignore  README.md
GLFW_GLAD_GLUT_GLEW_cmake_project/src/: CMakeLists.txt  lab001.rar  lab002.rar  lab003.rar
GLFW_GLAD_GLUT_GLEW_cmake_project/src/Camara01/: CMakeLists.txt  main.cpp  vertex_shader.vs
GLFW_GLAD_GLUT_GLEW_cmake_project/src/CoordinateSystems/: CMakeLists.txt  fragment_shader.fs  main.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/CoordinateSystems02/: CMakeLists.txt  main.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/NatteRobbins/: CMakeLists.txt  projection.c
GLFW_GLAD_GLUT_GLEW_cmake_project/src/Transformations01/: CMakeLists.txt  main.cpp  vertex_shader.vs
GLFW_GLAD_GLUT_GLEW_cmake_project/src/Tutorial_01/: main.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/lab001/: CMakeLists.txt  generador_puntos.h  main.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/lab002/: CMakeLists.txt  generador_puntos.h  main.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/lab003/: CMakeLists.txt  figura.h  main.cpp  pizza.h  triangulo.h
GLFW_GLAD_GLUT_GLEW_cmake_project/src/lab004/: CMakeLists.txt  main.cpp  vitral.h
GLFW_GLAD_GLUT_GLEW_cmake_project/src/lab005/: CMakeLists.txt  estrella.h  figura.h  main.cpp
GLFW_GLAD_GLUT_GLEW_cmake_project/src/lab006/: CMakeLists.txt  main.cpp  vitral.h
GLFW_GLAD_GLUT_GLEW_cmake_project/src/lab007/: CMakeLists.txt  fragment_shader.fs  main.cpp  vertex_shader.vs
GLFW_GLAD_GLUT_GLEW_cmake_project/src/parcial/: CMakeLists.txt  figura.h  main.cpp  pizza.h  triangulo.h
