#add_subdirectory( Tutorial_01 )
#add_subdirectory( Tutorial_02 )
add_subdirectory( lab001 )
add_subdirectory( lab002 )
add_subdirectory( lab003 )
add_subdirectory( lab004 )
add_subdirectory( lab005 )
add_subdirectory( lab006 )
add_subdirectory( lab007 )
add_subdirectory( parcial )
add_subdirectory( NatteRobbins )
add_subdirectory( CoordinateSystems )
add_subdirectory( CoordinateSystems02 )
add_subdirectory( Camara01 )
add_subdirectory( Rubik )
add_subdirectory( rubik3 )
add_subdirectory( Transformations01 )
add_subdirectory( hw0 )



